Add translation for login and signin link

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -80,3 +80,11 @@ en:
       picture: Picture 
       one: "There is one error."
       other: "There are %{count} errors." 
+  layouts:
+    application:
+      logged_in_as: "Logged in as"
+      edit_profile: "Edit profile"
+      log_out: Log out
+      sign_up: Sign up
+      login: Log in
+
